# GalaxyCollision

./: .gitattributes  .gitignore  Bearbeitete_Konzepte.html  Bearbeitete_Konzepte.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GalaxyCollision.slnx  GalaxyCollision.vcxproj  GalaxyCollision.vcxproj.filters  LICENSE  Notes.md  Progress_Log.md  Projeckt_Protokol.html  Projeckt_Protokol.md  README.md  build.ps1
Dev/: GalaxyCollision_RenderdocSettings.cap
Dev/Build Scripts/: build_linux_debug.sh  build_win_x64_debug.ps1
Dev/CMake Toolchain Files/: linux_toolchain.cmake  x64_win_toolchain.cmake
Dev/Notes/: Notes.md  Progress_Log.md  Projeckt_Protokol.md
GalaxyCollision/x64/Debug/: GalaxyCollision.exe.recipe
GalaxyCollision/x64/Debug/GalaxyCollision.tlog/: Cl.items.tlog  GalaxyCollision.lastbuildstate  lld-link.command.1.tlog  lld-link.read.1.tlog  lld-link.secondary.1.tlog  lld-link.write.1.tlog
Main/: CMakeLists.txt
Main/Include/: Constants.h  GalaxyCollision.h  Types.h
Main/Include/Utils/: DataUtils.h  DebugUtils.h  FileUtils.h  GenerationUtils.h  MathUtils.h  OpenGLUtils.h  UserInteractionUtils.h
Main/Libraries/: CMakeLists.txt
Main/Libraries/glad/: CMakeLists.txt
Main/Libraries/glad/include/glad/: glad.h
Main/Libraries/glad/src/: glad.c
Main/Libraries/glfw-3.4/docs/: footer.html  header.html
Main/Libraries/glfw-3.4/docs/html/: build_8md.html  build_guide.html  compat_8md.html  compat_guide.html  compile_8md.html  compile_guide.html  context_8md.html  context_guide.html  deprecated.html  dir_13577e2d8b9423099662de029791bd7d.html  dir_7f92719a7fe62e5b064f87d7a3c220b1.html  dir_a788ef6c2b1e5b367804e0b6ccfd6f11.html  dir_b11153cd0f4fd04a7564cc166f482635.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8md.html  input_guide.html  internal_8md.html  internals_guide.html  intro_8md.html  (+21 more)
Main/Resources/shaders/: Fragment.glsl  Fragment.shader  Vertex.glsl  Vertex.shader
Main/Source/: CMakeLists.txt  GalaxyCollision.c  GalaxyCollision.h  Main.c  Types.h
Main/Source/Utils/: CMakeLists.txt  DataUtils.c  DataUtils.h  DebugUtils.c  DebugUtils.h  FileUtils.c  FileUtils.h  GenerationUtils.c  GenerationUtils.h  MathUtils.c  MathUtils.h  OpenGLUtils.c  OpenGLUtils.h  PhysicsUtils.c  PhysicsUtils.h  UserInteractionUtils.c  UserInteractionUtils.h
Main/Tests/: CMakeLists.txt
Main/src/: CMakeLists.txt  Main.c  Types.h
Main/src/Utils/: CMakeLists.txt  DataUtils.c  DataUtils.h  GenerationUtils.h  MathUtils.c  MathUtils.h  PhysicsUtils.h
src/: Constants.h  Main.c  Types.h
src/Utils/: DataUtils.c  DataUtils.h  DebugUtils.c  DebugUtils.h  GenerationUtils.c  GenerationUtils.h  MathUtils.c  MathUtils.h  PhysicsUtils.c  PhysicsUtils.h
